--- a/DOOMRL.ipynb
+++ b/DOOMRL.ipynb
@@ -269,7 +269,7 @@
    "execution_count": 11,
    "outputs": [],
    "source": [
-    "model = PPO.load('train/train_corridor/bm_d4_5.zip')"
+    "model = PPO.load('train/models/bm_d4_5.zip')"
    ],
    "metadata": {
     "collapsed": false,
@@ -1734,7 +1734,7 @@
    "execution_count": 14,
    "outputs": [],
    "source": [
-    "model = PPO.load('train/train_corridor/bm_d4_5.zip')"
+    "model = PPO.load('train/models/bm_d4_5.zip')"
    ],
    "metadata": {
     "collapsed": false,
